--- a/_/css/styles.css
+++ b/_/css/styles.css
@@ -178,6 +178,24 @@ section.reader p.test {
   text-align: center;
   font-size: 40px;
 }
+section.reader ul {
+  position: relative;
+  z-index: 1;
+  padding-top: 50px;
+  padding-left: 50px;
+}
+section.reader li {
+  background: rgba(255,255,255,.8);
+  padding-bottom: 10px;
+  font-size: 33px;
+}
+section.reader img.aria {
+  opacity: .8;
+  position: absolute;
+  top: 80px;
+  left: 0;
+  width: 100%;
+}
 
 section.outro h1 {
   z-index: 1;
